functions/styles/home.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
    font-family: 'Roboto', sans-serif;
}

body {
    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Kits-Beach-Vancouver.jpg/2560px-Kits-Beach-Vancouver.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
}

#logo-bg {
    margin: auto;
    width: fit-content;
}

.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}

.card {
    color:black;
    font-size:140%;
    float:right;
    padding:0.5em;
    margin-top:0.80em;
    margin-left:0.25em;
}

.circle-btn {
    background-color:rgba(255, 255, 255, 0.192);
    border-radius: 100%;
    padding: 1em;
    margin-left:0.5em;
    float:left;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    max-height:40px;
    max-width:40px;
    margin-top:0.5em;
    margin-bottom:0.5em;
}

#container {
    width: fit-content;
    margin: 1em;
}

a {
    text-decoration: none;
    color: black;
}

.grid-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 2fr 1.5fr;
    gap: 0px 0px;
    grid-template-areas:
      "logo"
      "menu";
    height:100%;

  }
  .logo { grid-area: logo; }
  .menu {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 0px 0px;
    grid-template-areas:
      "menu1"
      "menu2"
      "menu3";
    grid-area: menu;
    border-radius:4px;
    background-color: rgba(0, 0, 0, 0);
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    padding:1em;
    -webkit-backdrop-filter: blur(20px);
    backdrop-filter: blur(20px);
    margin:1em;
    height:max-content;
    max-width:350px;
  }
  .menu1 { grid-area: menu1; 
    display:flex;
    flex-direction:row;
    }
  .menu2 { grid-area: menu2;
    display:flex;
    flex-direction:row;
}
  .menu3 { grid-area: menu3;
    display:flex;
    flex-direction:row;
}
  
  

